# reasoning-core

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  ENHANCEMENTS_PROPOSAL.md  FUNCTIONALITY_REVIEW.md  IMPLEMENTATION_STATUS.md  LICENSE  LLM_DEPLOYMENT_STRATEGY.md  LLM_INTEGRATION_PROPOSAL.md  LOCAL_INSTALL.md  QUICK_START.md  README.md  REVIEW_SUMMARY.md  SECURITY_FIXES.md  install-unified.bat  install-unified.sh  install.sh  pyproject.toml  pytest.ini  requirements-web.txt  run_web.sh  start.bat  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: 01_basic_usage.ipynb  02_medical_domain.ipynb  03_business_domain.ipynb  04_custom_domain.ipynb  05_knowledge_graphs.ipynb  README.md  async_usage_examples.py  requirements.txt
examples/data/: business_training.txt  generic_text.txt  medical_lecture.txt
installers/: BUILD_INSTRUCTIONS.md  README.md  UNIFIED_INSTALLER.md  build-all.sh
installers/macos/: build-pkg.sh  install_dependencies.sh  postinstall.sh  start_server.sh
installers/windows/: build-installer.bat  install_dependencies.ps1  installer.iss  start_server.bat
src/reasoning_core/: __init__.py
src/reasoning_core/api/: __init__.py  async_reasoning_api.py  reasoning_api.py
src/reasoning_core/domains/: base_domain.py  business_domain.py  medical_domain.py
src/reasoning_core/extractors/: __init__.py  concept_extractor.py  reasoning_chain_builder.py  relationship_mapper.py
src/reasoning_core/graph/: __init__.py  knowledge_graph.py
src/reasoning_core/llm/: __init__.py  base.py  ollama_service.py
src/reasoning_core/plugins/: __init__.py  base_domain.py  business_domain.py  medical_domain.py  meeting_domain.py
src/reasoning_core/web/: __init__.py  auth.py  cache.py  config.py  domain_builder.py  exports.py  parsers.py  progress.py  rate_limit.py  scraper.py  search.py  server.py  validation.py
tests/: __init__.py  conftest.py  test_api.py  test_async_api.py  test_business_domain.py  test_concept_extractor.py  test_integration.py  test_knowledge_graph.py  test_medical_domain.py  test_reasoning_chain_builder.py  test_relationship_mapper.py
web/: README.md  index.html  package.json
web/src/: App.jsx
web/src/components/: DetailedView.jsx  DomainBuilder.jsx  DomainSelector.jsx  ExportPanel.jsx  FileUpload.jsx  GraphComparison.jsx  HistoryPanel.jsx  KnowledgeGraphViewer.jsx  ProgressBar.jsx  ReasoningChainView.jsx  ResultsDisplay.jsx  SearchFilter.jsx  (+4 more)
